--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,15 @@ html {
 }
 body {
 	max-width: 600px;
+	padding: 20px;
 	width: auto;
 	margin: auto;
 }
 input {
 	font-size: 20px;
-	width: calc(100% - 30px);
+	width: 100%;
 	font-family: monospace;
-	margin: 3px 10px;
+	margin: 3px 0;
 	padding: 5px;
 	border-radius: 5px;
 }
