--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,112 @@ input {
 	padding: 5px;
 	border-radius: 5px;
 }
+.form-line {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 0 5px;
+}
+.flex-sb {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+.form-line > * {
+	width: auto;
+	flex-grow: 1;
+}
+
+.game-field {
+	display: flex;
+	flex-direction: row;
+	margin-bottom: 40px;
+}
+.game-row {
+	display: flex;
+	flex-direction: column-reverse;
+	justify-content: flex-end;
+}
+
+.game-item {
+	width: 50px;
+	height: 50px;
+	border: 1px solid #444;
+	border-radius: 7px;
+	margin: 1px;
+	transition: all .3s ease-out;
+}
+.game-item {
+	color: transparent;
+}
+.game-item._empty {
+	background-color: #eee;
+	border-color: transparent;
+}
+.game-item._x {
+	background-color: #3030b0;
+}
+.game-item._o {
+	background-color: #b03030;
+}
+.game-item._X {
+	background-color: #1010f0;
+}
+.game-item._O {
+	background-color: #f01010;
+}
+.game-item._X, .game-item._O {
+	box-shadow: inset 0 0 4px 4px rgba(255,255,0,0.9);
+	animation: animate-game-win-item .4s ease-in-out alternate infinite;
+}
+
+.game-row._active .game-item._empty {
+	background-color: #ff8;
+	border-color: #bbb;
+}
+
+
+.game-item._x, .game-item._o {
+	animation: animate-game-item .5s linear;
+}
+@keyframes animate-game-item {
+	from {
+		transform: translateY(-300px);
+	}
+	to {
+		transform: translateY(0);
+	}
+}
+
+@keyframes animate-game-win-item {
+	from {
+		box-shadow: inset 0 0 10px 2px rgba(255,255,0,1);
+	}
+	to {
+		box-shadow: inset 0 0 4px 4px rgba(255,255,0,1);
+	}
+}
+
+.player-name {
+	border-radius: 8px;
+	padding: 7px;
+}
+.player-name._empty {
+	color: #fff;
+}
+.player-name._empty:after {
+	content: "...awaiting...";
+}
+.player-name._x {
+	background-color: #c0c0ff;
+}
+.player-name._o {
+	background-color: #ffc0c0;
+}
+
+.invite-info {
+	padding-top: 100px;
+}
+.invite-image {
+	width: 100% !important;
+	height: unset !important;
+}
